updated the admin endpoints, and some backend fixes
